Fixed input moble sizing problem and button spacing

--- a/src/index.css
+++ b/src/index.css
@@ -165,6 +165,8 @@ form{
 form input {
 	height: 30px;
 	font-size: 20px;
+	width: 100%;
+	max-width: 350px;
 }
 
 
@@ -179,6 +181,11 @@ form li{
 form label {
 	flex: 1 0 120px;
   	max-width: 220px;
+}
+
+.btn-container{
+	display: flex;
+	justify-content: space-evenly;
 }
 
 form button{
